# bevy_platformer

./: Cargo.toml  README.md  script.py
.github/workflows/: linux.yaml  release.yaml  web.yaml
src/: asset_loader.rs  boids.rs  main.rs  map.rs  physics.rs  player.rs  quadtree.rs
