[package]
name = "bevy_platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = ["asset_processor", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "multi-threaded", "png", "serialize", "subpixel_glyph_atlas", "wav", "x11", "wayland", "animation", "bevy_animation", "bevy_render", "bevy_dynamic_plugin"
# Functionality
# "dynamic_linking", 
# "multi-threaded", 
# "bevy_asset", 
# "bevy_audio", 
# "bevy_scene", 
# "bevy_winit",
# "bevy_render",
# "bevy_core_pipeline",
# "bevy_sprite",
# "bevy_text",
# "bevy_ui",
# "bevy_animation",
# "animation",
# "default_font",
# "asset_processor",
# "file_watcher",
# "serialize",
# "bevy_dynamic_plugin",
# File formats
# "png",
# "flac",
# "wav",
# Platform-specific
# "x11",
# "wayland",
] }
bevy-inspector-egui = "0.22.1"
image = "0.24.8"
ahash = "0.8.8"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3
